# Crimsonite

./: .gitignore  CMakeLists.txt  README.md
common/: CMakeLists.txt
common/include/: colors.h  log.h
examples/: README.md
examples/barebones/: init.lua  mod.lua
launcher/: CMakeLists.txt
launcher/include/: colors.h
launcher/src/: launcher.cpp
modloader/: CMakeLists.txt
modloader/include/: console.h  hook_manager.h  log.h  lua_utils.h  modloader.h
modloader/src/: console.cpp  hook_manager.cpp  lua_utils.cpp  main.cpp  modloader.cpp
